# advent-of-code

./: README.md  advent-of-code.cabal  auto-import.hs  cabal.project  d1.hs  d2.hs  d3.hs  d4-2.hs  d4.hs
app/: Main.hs
discover/: README.md  discover.cabal
discover/app/: Main.hs
discover/src/: Lib.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.10.4/: package.cache  y2020-0.1.0.0-inplace.conf
src/: Day1.hs  Day4.hs  Helper.hs
src/Year2020/Day1/: Part1.hs  Part2.hs
src/Year2020/Day2/: Part1.hs  Part2.hs
src/Year2020/Day3/: Part1.hs  Part2.hs
src/Year2020/Day4/: Part1.hs  Part2.hs
src/Year2021/Day1/: Part1.hs  Part2.hs
src/Year2021/Day2/: Part1.hs  Part2.hs
src/Year2021/Day3/: Part1.hs
src/Year2023/Day1/: Part1.hs
y2020/: y2020.cabal
y2020/app/: Main.hs
y2020/src/: Day1.hs  Day2.hs  Day3.hs  Day4.hs
y2021/: y2021.cabal
y2021/app/: Main.hs
y2021/src/: Day1.hs  Day2.hs  Day3.hs
